--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,33 +188,38 @@ jobs:
         import datetime
         import re
 
-        def parse_junit(xml_file):
-            try:
-                tree = ET.parse(xml_file)
-                root = tree.getroot()
-                total = int(root.attrib.get('tests', 0))
-                failures = int(root.attrib.get('failures', 0))
-                errors = int(root.attrib.get('errors', 0))
-                skipped = int(root.attrib.get('skipped', 0))
-                return total, failures, errors, skipped
-            except:
-                return 0, 0, 0, 0
+        # Parse test results from testsuite attributes
+        total_tests = 0
+        failed_tests = 0
+        error_tests = 0
+        skipped_tests = 0
 
-        def parse_coverage(xml_file):
-            try:
-                with open(xml_file, 'r') as f:
-                    content = f.read()
-                    match = re.search(r'line-rate="([^"]+)"', content)
-                    if match:
-                        return round(float(match.group(1)) * 100)
-            except:
-                pass
-            return 0
+        try:
+            tree = ET.parse('test-results.xml')
+            root = tree.getroot()
+            suites = root.findall('testsuite')
+            if suites:
+                suite = suites[0]  # Get first testsuite
+                total_tests = int(suite.attrib.get('tests', 0))
+                failed_tests = int(suite.attrib.get('failures', 0))
+                error_tests = int(suite.attrib.get('errors', 0))
+                skipped_tests = int(suite.attrib.get('skipped', 0))
+        except:
+            pass
 
-        total_tests, failed_tests, error_tests, skipped_tests = parse_junit('test-results.xml')
+        # Parse coverage from XML
+        coverage_percent = 0
+        try:
+            with open('coverage.xml', 'r') as f:
+                content = f.read()
+                match = re.search(r'line-rate="([^"]+)"', content)
+                if match:
+                    coverage_percent = round(float(match.group(1)) * 100)
+        except:
+            pass
+
         passed_tests = total_tests - failed_tests - error_tests - skipped_tests
         success_rate = round((passed_tests / total_tests * 100) if total_tests > 0 else 0)
-        coverage_percent = parse_coverage('coverage.xml')
 
         cap_img = '<img src="https://capsule-render.vercel.app/api?type=waving&color=A020F0&height=200&section=header&text=cysu&fontSize=80&fontAlignY=50&desc=&descAlignY=70&descAlign=50&animation=twinkling&fontColor=4B0082&borderRadius=20&font=Sono&stroke=A020F0&strokeWidth=2&wave=1&waveOffset=0" />'
         timestamp = datetime.datetime.utcnow().strftime('%Y-%m-%d %H:%M:%S UTC')
@@ -297,5 +302,6 @@ jobs:
         tag_name: v${{ steps.version.outputs.new_version }}
         name: Release v${{ steps.version.outputs.new_version }}
         body: ${{ steps.release_body.outputs.release_body }}
-        files: |
+        generate_release_notes: false
+        files:
           cysu-v${{ steps.version.outputs.new_version }}.tar.gz
