enhance(ci): update release notes format to include test results and generation timestamp

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -196,7 +196,11 @@ jobs:
     - name: Create Release Notes
       run: |
         # Simple release notes with just the version and test results
-        echo "# Release v${{ steps.version.outputs.new_version }}" > release_notes.md
+        echo "" > release_notes.md
+        echo "<div align='center'>" >> release_notes.md
+        echo "" >> release_notes.md
+        echo "# Test Results & Quality Report" >> release_notes.md
+        echo "_Generated on $(date '+%Y-%m-%d %H:%M:%S UTC')_" >> release_notes.md
         echo "" >> release_notes.md
 
         # Append test results to release notes (if file exists)
@@ -209,6 +213,9 @@ jobs:
             echo '' >> release_notes.md
             echo 'Test results were not generated properly.' >> release_notes.md
         fi
+
+        echo "" >> release_notes.md
+        echo "</div>" >> release_notes.md
 
         # Debug: show final release notes content
         echo "=== FINAL RELEASE NOTES ==="
