refactor(templates,manifest): standardize formatting in JSON manifests and HTML templates
- Changed single-line "categories" array in manifest.json and site.webmanifest to multi-line for better readability
- Reformatted HTML elements in account.html and materials.html to single-line structures
- Removed inconsistent trailing newlines to unify file endings across templates

This improves code consistency, reduces diff noise in future commits, and enhances maintainability.

--- a/app/static/manifest.json
+++ b/app/static/manifest.json
@@ -10,7 +10,11 @@
     "scope": "/",
     "lang": "ru",
     "dir": "ltr",
-    "categories": ["education", "productivity", "utilities"],
+    "categories": [
+        "education",
+        "productivity",
+        "utilities"
+    ],
     "icons": [
         {
             "src": "/static/icons/android-chrome-192x192.png",
