ci(build): specify custom Dockerfile path in GitHub workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
+        file: config/Dockerfile
         push: true
         tags: ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
         cache-from: type=gha
